--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
     <string name="sign_in">Sign In</string>
     <string name="create_new_account">Create New Account</string>
     <string name="add_image">Add Image</string>
+    <string name="name">Name</string>
+    <string name="confirm_password">confirm Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="select_user">Select User</string>
+    <string name="type_a_message">Type a message</string>
+    <string name="online">Online</string>
+    <string name="유저목록">유저목록</string>
+    <string name="채팅상대">채팅 상대</string>
+    <string name="친구">친구</string>
+    <string name="friends">Friends</string>
+    <string name="aa">Aa</string>
 </resources>
